# "src/util/ChangeLog"

2005-08-05	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-53-unique-01-02:
	  Added bitset placeholder class, intending to extend
		std::bitset with arithmetic functionality later.
	  util/inttypes.h: configure-dependent wrapper to standard headers.
	  util/numeric/bigger_ints.h: definitions of larger synthesized
		integer types.
	  util/numeric/inttype_traits.h: relationships between
		next larger/smaller integer types.  
	  util/numeric/nibble_tables.h: generalized MSB_position.  
	  util/static_assert.h: like compile-time constraint/concept check.
	  Working towards more extendable chunk_map_pool, 
		allowing for bigger chunks (64 now enabled by uin64).
	  util/test/chunk_map_pool_test.cc:
		added (disabled) checks for huge chunked-pools.  
		Need to turn them on by hand and hand-check.  


2005-07-15	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-48-connect-01-30:
	  Added front() and back() interface to packed_array[_generic].
	  Added "util/wtf.h" as developer tool for figuring out
		the canonical type of a typename/typedef and 
		the type of an object, e.g. return type.  


2005-07-14	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-48-connect-01-28-subinstance-07:
	  Critical bug fix in multikey_generic<>::operator =:
		detected self-assignment (alias) condition
		and avoid self-destruction.  Hello?  C++ 101.  
		Strangely, this problem only exhibited on a linux build...


2005-07-12	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-48-connect-01-28-subinstance-04:
	  util/ring_node.h:
		Added default iterator structs for convenience.
		Sometimes necessary when wanting to refer to 
		ring_node_derived<incomplete type>.


2005-07-06	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-48-connect-01-06-actuals-16:
	  Cleaned up "util/multidimensional_sparse_set.tcc"
		iterator construction over assignment, 