@@ -2,6 +2,10 @@
 
 2005-08-05	David Fang		<fangism@users.sourceforge.net>
 
+	* ARTXX-00-01-04-main-00-53-unique-01-03:
+	  Cleaned up list_vector.{h,tcc} some.  
+
+
 	* ARTXX-00-01-04-main-00-53-unique-01-02:
 	  Added bitset placeholder class, intending to extend
 		std::bitset with arithmetic functionality later.
